# android_vendor_broadcom_rpi

./: BoardConfigVendor.mk  HACKING  README  README.mkdn  device-partial.mk  device-vendor.mk  vendorinit.sh  vendorsetup.sh
manifests/: broadcom-rpi-vendor.xml
opengl/: Android.mk  CMakeLists.txt  README  buildme
opengl/host_applications/linux/apps/smem/: smem.c
opengl/host_applications/linux/libs/sm/: user-vcsm.c
opengl/interface/khronos/: CMakeLists.txt
opengl/interface/khronos/common/: khrn_client.c  khrn_client.h
opengl/interface/khronos/common/linux/: khrn_client_platform_linux.c
opengl/interface/khronos/egl/: egl_client.c  egl_client_config.h  egl_client_config_cr.c  egl_client_context.c  egl_client_context.h  egl_client_cr.c  egl_int_config.h
opengl/interface/khronos/ext/: egl_khr_image_client.c  gl_oes_egl_image_client.c
opengl/interface/khronos/glxx/: glxx_client.c
opengl/interface/khronos/include/EGL/: egl.h  eglext_android.h  eglplatform.h
opengl/interface/vcos/generic/: vcos_cmd.c
opengl/interface/vcos/pthreads/: vcos_platform.h  vcos_platform_types.h
opengl/interface/vmcs_host/: vc_vchi_tvservice.c
opengl/makefiles/cmake/toolchains/: arm-linux-gnueabihf.cmake
patches/: android_build.patch
proprietary/: Android.mk  README_libkhrn_static  brcm_egl.c  brcm_egl.h  dummy.c
